<resources>
    <string name="app_name">customer_registration</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="dont_have_an_account">Dont have an Account?</string>
    <string name="signup">SignUp</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="customer_registration">Customer Registration</string>
    <string name="customer_name">Customer Name</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="pincode">Pincode</string>
    <string name="contact">Contact No.</string>
    <string name="attach">Attachment</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="customer_list">Customer List</string>
    <string name="search">Search</string>
    <string name="customer_type">Customer Type</string>
    <string name="city">City</string>
    <string name="add_product">Add New Product</string>
    <string name="date">Date</string>
    <string name="productmodel">Product Model</string>
    <string name="productno">Product Number</string>
    <string name="Time">Time</string>
    <string name="requirement">Requirement</string>
    <string name="service_request">Service Request</string>
    <string name="Add">Address</string>
    <string name="invoiceno">Invoice Number</string>
    <string name="serialno">Serial Number</string>
    <string name="srvtype">Service Type</string>
    <string name="srvrequststst">Service Status</string>
    <string name="tempinvoiceno">Invoice Number : </string>
    <string name="tempserialno">Serial Nummber : </string>
    <string name="tempsrvtype">Service type : </string>
    <string name="temprequststst">Srvice Status : </string>
    <string name="btnsrvrequstprtdtel">Product Details</string>
    <string name="srvsrtdate">Start Date</string>
    <string name="srvenddate">End Date</string>
    <string name="apply">Apply</string>
    <string name="clrall">Clear All</string>
    <string name="service_allocation">Service Allocation</string>
    <string name="service_re_allocation">Service Re-Allocation</string>
    <string name="service_schedule">Service Schedule</string>
    <string name="service_re_schedule">Service Re-Schedule</string>
    <string name="srvallocatecancel">Cancel</string>
    <string name="srvallocatesubmit">Submit</string>
    <string name="service_allocate_to_Technician">Services Allcated to Technician</string>
    <string name="A">A</string>
    <string name="plsselectothrtech">Please Select Other Technician to reallocate Service</string>
    <string name="srvsddate">Date</string>
    <string name="srvsdtime">Time</string>
    <string name="accept">Accept</string>
    <string name="srvsddes">Schedule Description</string>
    <string name="srvcharge">Service Charge</string>
    <string name="service_completion">Service Completion</string>
    <string name="srvsign">customer Signature</string>
    <string name="filename">File Name</string>
    <string name="clear_pad">Cancel</string>
    <string name="save_signature">Save</string>
    <string name="Product">Product (Order)</string>
    <string name="product_name">Product Name</string>
    <string name="tempprtlitname">Product Name</string>
    <string name="prtlitname">Product Name</string>
    <string name="srvrequst">Service Request</string>
    <string name="comp">Complete</string>
    <string name="customer_sign">Customer Signature</string>
    <string name="tempprtmodel">Product Model</string>
    <string name="prtmodel">Product Model</string>
    <string name="Srvice_Info">Service Information</string>
    <string name="service_compltete">Service Complete</string>
    <string name="Srvice">Service</string>
    <string name="completion_time_date">Completion Date/ime</string>
    <string name="techname">Technician Name</string>
    <string name="srvchrg">Service Charge</string>
    <string name="srvhisremrk">Service Remark</string>
    <string name="qurysupport">Query Support</string>
    <string name="des">Description</string>
    <string name="send">Send</string>
    <string name="title">Title</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="TAC">Terms and Conditions</string>
    <string name="why">In an essay, article, or book, an introduction (also known as a prolegomenon) is a beginning section which states the purpose and goals of the following writing. This is generally followed by the body and conclusion.</string>
    <string name="version">Version: </string>
    <string name="ver">1.0.0</string>
    <string name="viewhere">Terms and Conditions</string>
    <string name="sublinetac">You can view the Terms and Conditions here</string>
    <string name="viewt_amp_c"><![CDATA[View T&C]]></string>
    <string name="view_pp">View Privacy policy</string>
    <string name="sublinepp">You can view the Privacy Plolicy here</string>
</resources>
