<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutUs">

    <LinearLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/yellow"
        tools:ignore="MissingConstraints"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        >
        <ImageView
            android:id="@+id/backarrowau"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:layout_marginStart="10dp"
            android:layout_gravity="center_vertical"
            />

        <TextView
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/customer_sign"
            android:textColor="@color/black"
            android:layout_gravity="center" />
    </LinearLayout>

    <ImageView
        android:id="@+id/logo"
        android:layout_below="@+id/appBarLayout"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginEnd="200dp"
        android:src="@drawable/logo2"
        />


    <TextView
        android:id="@+id/Intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingStart="10dp"
        android:text="@string/why"
        android:textSize="15sp"
        android:layout_below="@+id/logo"
        tools:ignore="RtlSymmetry" />


    <LinearLayout
        android:id="@+id/llver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Intro"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:orientation="horizontal">

    <TextView
        android:id="@+id/vsersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2.5"
        android:text="@string/version"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:text="@string/ver"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tac"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llver"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:text="@string/viewhere"
        android:gravity="center"/>

    <LinearLayout
        android:id="@+id/tacview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/tac"
        android:paddingBottom="20dp">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="166.9"
        android:lines="3"
        android:text="@string/sublinetac"
        />

    <Button
        android:id="@+id/btnvtac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="5dp"
        android:text="@string/viewt_amp_c"
        android:layout_weight="0.5"
        />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/pp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/tacview"
        android:paddingBottom="20dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="166.9"
            android:lines="3"
            android:text="@string/sublinepp"
            />

        <Button
            android:id="@+id/btnvpp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="5dp"
            android:text="@string/view_pp"
            android:layout_weight="0.5"
            />

    </LinearLayout>


</RelativeLayout>