<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="320dp"
    android:layout_height="250dp"
    android:orientation="vertical"
    android:background="@drawable/bb">

        <ImageView
            android:id="@+id/imgvclosesrvreallo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close"
            android:layout_gravity="right" />

        <TextView
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/service_allocate_to_Technician"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/alloedtech"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="15sp"
            android:text="@string/A"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="15sp"
            android:text="@string/plsselectothrtech"
            android:textColor="@color/white"/>

    <Spinner
        android:id="@+id/spinnerrealltechnician"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/btnsrvreallcancel"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="8dp"
                android:drawablePadding="10dp"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:background="@drawable/btn_bg"/>

            <Button
                android:id="@+id/btnsrvreallsubmit"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="20dp"
                android:drawablePadding="10dp"
                android:text="@string/accept"
                android:textAllCaps="false"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:background="@drawable/btn_bg"/>
        </LinearLayout>
</LinearLayout>