<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <!--    <LinearLayout-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:orientation="horizontal">-->

    <!--    <androidx.appcompat.widget.SearchView-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        card_view:iconifiedByDefault="false"-->
    <!--        android:background="@drawable/input_bg"-->
    <!--        />-->
    <!--</LinearLayout>-->


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardviewprtlit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="5dp"
        card_view:cardUseCompatPadding="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            tools:ignore="UselessParent">


            <!--                android:id="@+id/srvrqstcon"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:orientation="horizontal"-->
            <!--                android:layout_marginTop="10dp">-->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/tvprtlitdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="20dp"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </RelativeLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/temptvprtlitname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/tempprtlitname"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    card_view:layout_constraintEnd_toStartOf="@+id/tvprtlitname"
                    card_view:layout_constraintHorizontal_bias="0.5"
                    card_view:layout_constraintStart_toStartOf="parent"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/tvprtlitname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/prtlitname"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintHorizontal_bias="0.5"
                    card_view:layout_constraintStart_toEndOf="@+id/temptvprtlitname"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteY="0dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/tempprtlitmodel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/tempprtmodel"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    card_view:layout_constraintEnd_toStartOf="@+id/prtlitmodel"
                    card_view:layout_constraintHorizontal_bias="0.5"
                    card_view:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteY="0dp"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/prtlitmodel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/prtmodel"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintHorizontal_bias="0.5"
                    card_view:layout_constraintStart_toEndOf="@+id/tempprtlitmodel"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteY="0dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/tempprtlitinno"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/tempinvoiceno"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    card_view:layout_constraintEnd_toStartOf="@+id/prtlitinno"
                    card_view:layout_constraintHorizontal_bias="0.5"
                    card_view:layout_constraintStart_toStartOf="parent"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/prtlitinno"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/invoiceno"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintHorizontal_bias="0.5"
                    card_view:layout_constraintStart_toEndOf="@+id/tempprtlitinno"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteY="0dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/tempprtlitsrlno"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/tempserialno"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    card_view:layout_constraintEnd_toStartOf="@+id/prtlitsrlno"
                    card_view:layout_constraintHorizontal_bias="0.5"
                    card_view:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteY="0dp"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/prtlitsrlno"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/serialno"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintHorizontal_bias="0.5"
                    card_view:layout_constraintStart_toEndOf="@+id/tempprtlitsrlno"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteY="0dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <Button
                android:id="@+id/btnprtlifrsrvrqust"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/srvrequst"
                android:background="@drawable/btn_bg"/>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>
