<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ServiceReschedule"
    android:background="@drawable/bb">

    <LinearLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/yellow"
        tools:ignore="MissingConstraints"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backarrowsrvresd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            />

        <TextView
            android:id="@+id/logo"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/service_re_schedule"
            android:textColor="@color/black"
            android:layout_gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:singleLine="true"
            android:id="@+id/tvsrvsddate"
            android:focusable="false"
            android:hint="@string/srvsddate"
            android:textColorHint="@color/white"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:textSize="20sp"
            android:paddingStart="20dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingEnd="5dp"
            android:textColor="@color/white" />


        <TextView
            android:singleLine="true"
            android:id="@+id/tvsrvsdtime"
            android:textColorHint="@color/white"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:focusable="false"
            android:hint="@string/srvsdtime"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:paddingStart="20dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColor="@color/white"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etsrvresddate"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/input_bg"
            android:drawableStart="@drawable/ic_calendarr"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/date"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnersrvtype"
            android:clickable="true"
            android:cursorVisible="false"
            android:textColor="@color/white"
            android:focusable="false"
            android:focusableInTouchMode="false"
            tools:ignore="MissingConstraints,TextFields"
            android:textColorHint="@color/colorWhite"/>

        <EditText
            android:id="@+id/etsrvresdtime"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/input_bg"
            android:drawableStart="@drawable/ic_clock"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/Time"
            android:textColor="@color/white"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etsrvdate"
            android:clickable="true"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            tools:ignore="MissingConstraints,TextFields"
            android:textColorHint="@color/colorWhite"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <Spinner
                android:id="@+id/spinnersrvresdpriority"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                style="@style/spinner_style"/>


            <Spinner
                android:id="@+id/spinnersrvresdtype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                style="@style/spinner_style"/>


        </LinearLayout>

        <EditText
            android:id="@+id/etsrvresddes"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/input_bg"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/srvsddes"
            android:textColorHint="@color/colorWhite"
            android:inputType="textMultiLine"
            android:paddingStart="25dp"
            android:paddingTop="10dp"
            android:paddingEnd="5dp"
            android:layout_weight="0.5"
            android:paddingBottom="10dp"
            android:gravity="top"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="50dp"
            >

            <Button
                android:id="@+id/btnsrvresdcancel"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="10dp"
                android:drawablePadding="10dp"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:background="@drawable/btn_bg"/>

            <Button
                android:id="@+id/btnsrvresdaccept"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:drawablePadding="10dp"
                android:text="@string/accept"
                android:textAllCaps="false"
                android:background="@drawable/btn_bg"
                android:layout_gravity="center"
                android:layout_weight="0.5"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>